# routes/scoutifyRoutes.ts
@@ -7,6 +7,8 @@ const router = Router();
 
 router.get('/game-matchups', scoutifyPublicPerSecondLimiter, scoutifyPublicPerMinuteLimiter, scoutifyController.getGameMatchups);
 router.get('/game-details', scoutifyPublicPerSecondLimiter, scoutifyPublicPerMinuteLimiter, scoutifyController.getGameDetails);
+router.get('/game-comments', scoutifyPublicPerSecondLimiter, scoutifyPublicPerMinuteLimiter, scoutifyController.getGameComments);
+router.post('/game-comments', verifyToken, scoutifyController.createGameComment);
 
 router.get('/user/me', verifyToken, scoutifyController.getCurrentUserBinding);
 router.get('/user/me/android-device', verifyToken, scoutifyController.getCurrentAndroidDeviceBinding);
